--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,5 @@ steps:
     volumes: |
       $(build.sourcesDirectory):/srv/jekyll
       $(build.binariesDirectory):/srv/jekyll/_site
-    containerCommand: 'bundle exec jekyll algolia'
+    containerCommand: 'gem install bundler; bundle exec jekyll algolia'
     detached: false
