--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Vivien Fabing
+title: Vivien Fabing's blog
+author: Vivien Fabing
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Vivien Fabing on Programming, .NET, Azure, DevOps and More.
