--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     versionSpec: '>= 2.5'
 
 - script: |
-    gem update --system '3.0'
+    gem update --system
     gem install jekyll bundler
     bundle install --retry=3 --jobs=4
   displayName: 'bundle install'
