--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,8 @@ steps:
 
 - script: |
     gem update --system '2.0.1'
-    gem install jekyll bundler
+    gem install jekyll
+    gem install bundler --version '2.0.1'
     bundle install --retry=3 --jobs=4
   displayName: 'bundle install'
 
