--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,10 +15,12 @@ steps:
     versionSpec: '>= 2.6.3'
 
 - script: |
+    gem update --system '2.0.1'
     gem install jekyll bundler
+    gem install jekyll
+    gem install bundler --version '2.0.1'
     bundle install --retry=3 --jobs=4
   displayName: 'bundle install'
-
 - script: bundle exec jekyll algolia
   displayName: 'bundle exec jekyll algolia'
   env: { ALGOLIA_API_KEY: $(ALGOLIA_API_KEY) }
