--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.vivienfabing.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: vivienfabing
 github_username:  vfabing
+linkedin_username: vivien-fabing
 repository: vfabing/vfabing.github.io
 
 # Build settings
